Prevented header overflow

--- a/docs/app/styles.css
+++ b/docs/app/styles.css
@@ -45,6 +45,10 @@ body {
   color: var(--color-fd-primary);
 }
 
+#nd-nav {
+  z-index: 10000;
+}
+
 :focus-visible {
   box-shadow: unset !important;
 }
